--- a/app/src/main/res/layout/main_appbar.xml
+++ b/app/src/main/res/layout/main_appbar.xml
@@ -20,6 +20,9 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/main_content" />
+    <include
+        android:id="@+id/include"
+        layout="@layout/main_content" />
+
 
 </android.support.design.widget.CoordinatorLayout>
