--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -6,30 +6,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.tigerbus.ui.MainActivity"
+    tools:context="com.tigerbus.ui.main.MainActivity"
     tools:showIn="@layout/main_appbar">
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/mainview"
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" >
-
-    </android.support.constraint.ConstraintLayout>
+    </android.support.v4.view.ViewPager>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:src="@drawable/ic_nav_search"
-        app:layout_anchor="@+id/mainview"
+        android:src="@drawable/fab_search"
+        app:layout_anchor="@+id/viewpager"
         app:layout_anchorGravity="right|bottom"
-        app:layout_constraintBottom_toBottomOf="@+id/mainview"
-        app:layout_constraintEnd_toEndOf="@+id/mainview"/>
+        app:layout_constraintBottom_toBottomOf="@+id/viewpager"
+        app:layout_constraintEnd_toEndOf="@+id/viewpager"/>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/bottomNavigationView"
