--- a/app/src/main/res/menu/main_bottom_navigation.xml
+++ b/app/src/main/res/menu/main_bottom_navigation.xml
@@ -9,6 +9,10 @@
         android:icon="@drawable/ic_nav_station"
         android:title="@string/navigation_bottom_station" />
     <item
+        android:id="@+id/search"
+        android:icon="@drawable/ic_nav_search"
+        android:title="@string/navigation_bottom_remind"/>
+    <item
         android:id="@+id/remind"
         android:icon="@drawable/ic_nav_remind"
         android:title="@string/navigation_bottom_remind"/>
