--- a/app/src/main/res/layout/route_arrival_fragment.xml
+++ b/app/src/main/res/layout/route_arrival_fragment.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent">
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbarlayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
@@ -23,5 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@android:color/white"
-        app:layout_constraintTop_toBottomOf="@+id/tablayout" />
+        app:layout_constraintTop_toBottomOf="@+id/appbarlayout" />
+
+
 </android.support.constraint.ConstraintLayout>
