--- a/app/src/main/res/layout/route_arrival_fragment.xml
+++ b/app/src/main/res/layout/route_arrival_fragment.xml
@@ -2,7 +2,6 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -26,5 +25,6 @@
         android:background="@android:color/white"
         app:layout_constraintTop_toBottomOf="@+id/appbarlayout" />
 
+    <include layout="@layout/bottomsheet_content"/>
 
 </android.support.constraint.ConstraintLayout>
