--- a/app/src/main/res/layout/route_arrival_fragment.xml
+++ b/app/src/main/res/layout/route_arrival_fragment.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/constraintlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -25,6 +26,78 @@
         android:background="@android:color/white"
         app:layout_constraintTop_toBottomOf="@+id/appbarlayout" />
 
-    <include layout="@layout/bottomsheet_content"/>
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/bottom_sheet"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:behavior_hideable="true"
+        app:behavior_peekHeight="50dp"
+        app:layout_behavior="@string/bottom_sheet_behavior"
+        app:layout_constraintBottom_toBottomOf="@+id/constraintlayout">
+        <LinearLayout
+            android:id="@+id/bottom_sheet_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@color/white">
+
+            <TextView
+                android:id="@+id/sheetitem_remind"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/sheetitem_remind"
+                android:textSize="@dimen/text14sp"
+                android:gravity="left|center"
+                android:clickable="true"
+                android:background="@color/transparent"
+                android:drawableLeft="@drawable/ic_audiotrack_light"/>
+
+            <TextView
+                android:id="@+id/sheetitem_save_station"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/sheetitem_save_station"
+                android:textSize="@dimen/text14sp"
+                android:gravity="left|center"
+                android:clickable="true"
+                android:background="@color/transparent"
+                android:drawableLeft="@drawable/ic_audiotrack_light"/>
+
+            <TextView
+                android:id="@+id/sheetitem_station_bus"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/sheetitem_station_bus"
+                android:textSize="@dimen/text14sp"
+                android:gravity="left|center"
+                android:clickable="true"
+                android:background="@color/transparent"
+                android:drawableLeft="@drawable/ic_audiotrack_light"/>
+
+            <TextView
+                android:id="@+id/sheetitem_station_lcaotion"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/sheetitem_station_lcaotion"
+                android:textSize="@dimen/text14sp"
+                android:gravity="left|center"
+                android:clickable="true"
+                android:background="@color/transparent"
+                android:drawableLeft="@drawable/ic_audiotrack_light"/>
+
+            <TextView
+                android:id="@+id/sheetitem_station_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/sheetitem_station_view"
+                android:textSize="@dimen/text14sp"
+                android:gravity="left|center"
+                android:clickable="true"
+                android:background="@color/transparent"
+                android:drawableLeft="@drawable/ic_audiotrack_light"/>
+
+
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
 
 </android.support.constraint.ConstraintLayout>
