--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,4 +15,13 @@
     <dimen name="text26sp">26sp</dimen>
     <dimen name="text28sp">28sp</dimen>
     <dimen name="text30sp">30sp</dimen>
+
+    <dimen name="ui5dp">5dp</dimen>
+    <dimen name="ui8dp">8dp</dimen>
+    <dimen name="ui10dp">10dp</dimen>
+    <dimen name="ui12dp">12dp</dimen>
+    <dimen name="ui14dp">14dp</dimen>
+    <dimen name="ui16dp">16dp</dimen>
+    <dimen name="ui20dp">20dp</dimen>
+
 </resources>
