--- a/app/src/main/res/layout/route_activity.xml
+++ b/app/src/main/res/layout/route_activity.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.tigerbus.ui.route.RouteActivity">
+    tools:context="com.tigerbus.ui.busRoute.RouteActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
