--- a/app/src/main/res/layout/route_arrival_bottomsheet.xml
+++ b/app/src/main/res/layout/route_arrival_bottomsheet.xml
@@ -2,7 +2,7 @@
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/coordinatorlayout"
+    android:id="@+id/sheetlayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         app:behavior_hideable="true"
         app:layout_behavior="@string/bottom_sheet_behavior"
-        app:layout_constraintBottom_toBottomOf="@+id/coordinatorlayout">
+        app:layout_constraintBottom_toBottomOf="@+id/sheetlayout">
         <LinearLayout
             android:id="@+id/bottom_sheet_layout"
             android:layout_width="match_parent"
