--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="transparent">#00000000</color>
+    <color name="halftransparent">#50000000</color>
     <color name="darkgray">#A9A9A9</color>
     <color name="red">#FF0000</color>
     <color name="white">#FFFFFF</color>
