--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/item"
     android:layout_width="match_parent"
@@ -8,12 +7,19 @@
     android:padding="5dp">
 
     <TextView
+        android:id="@+id/routename"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="235 往中山公園" />
+
+    <TextView
         android:id="@+id/stopname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="南新莊"
         android:textSize="@dimen/text20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/line" />
+        app:layout_constraintBottom_toBottomOf="@+id/line"
+        app:layout_constraintTop_toBottomOf="@+id/routename" />
 
     <TextView
         android:id="@+id/estimatetime"
@@ -21,14 +27,15 @@
         android:layout_height="wrap_content"
         android:text="尚未發車"
         android:textSize="@dimen/text20sp"
-        app:layout_constraintEnd_toEndOf="@+id/line"/>
+        app:layout_constraintEnd_toEndOf="@+id/line"
+        app:layout_constraintTop_toBottomOf="@+id/routename" />
 
     <View
         android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
+        android:layout_marginTop="3dp"
         android:background="@color/darkgray"
-        android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@+id/stopname"/>
+        app:layout_constraintTop_toBottomOf="@+id/stopname" />
 
 </android.support.constraint.ConstraintLayout>
