--- a/app/src/main/res/layout/route_arrival_item.xml
+++ b/app/src/main/res/layout/route_arrival_item.xml
@@ -1,34 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="5dp">
+    android:layout_margin="@dimen/ui3dp">
 
-    <TextView
-        android:id="@+id/stopname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="南新莊"
-        android:textSize="@dimen/text20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/line" />
-
-    <TextView
-        android:id="@+id/estimatetime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="尚未發車"
-        android:textSize="@dimen/text20sp"
-        app:layout_constraintEnd_toEndOf="@+id/line"/>
-
-    <View
-        android:id="@+id/line"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/item"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/darkgray"
-        android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@+id/stopname"/>
+        android:layout_height="wrap_content"
+        android:padding="@dimen/ui5dp">
 
-</android.support.constraint.ConstraintLayout>
+        <TextView
+            android:id="@+id/stopname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="南新莊"
+            android:textSize="@dimen/text20sp"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+        <TextView
+            android:id="@+id/estimatetime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="尚未發車"
+            android:textSize="@dimen/text20sp"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+    </android.support.constraint.ConstraintLayout>
+</android.support.v7.widget.CardView>
