--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,6 +16,7 @@
     <dimen name="text28sp">28sp</dimen>
     <dimen name="text30sp">30sp</dimen>
 
+    <dimen name="ui3dp">3dp</dimen>
     <dimen name="ui5dp">5dp</dimen>
     <dimen name="ui8dp">8dp</dimen>
     <dimen name="ui10dp">10dp</dimen>
