--- a/app/src/main/res/layout/main_appbar.xml
+++ b/app/src/main/res/layout/main_appbar.xml
@@ -11,19 +11,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay"
-        app:elevation="0dp">
+        app:elevation="@dimen/ui0dp">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
     </android.support.design.widget.AppBarLayout>
 
-    <include
-        android:id="@+id/include"
-        layout="@layout/main_content" />
-
+    <include layout="@layout/main_content" />
 
 </android.support.design.widget.CoordinatorLayout>
