--- a/app/src/main/res/layout/route_map_fragment.xml
+++ b/app/src/main/res/layout/route_map_fragment.xml
@@ -22,9 +22,8 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/ui0dp"
+        android:layout_height="0dp"
         android:background="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/appbarlayout" />
 
 </android.support.constraint.ConstraintLayout>
