--- a/app/src/main/res/layout/home_item.xml
+++ b/app/src/main/res/layout/home_item.xml
@@ -32,6 +32,7 @@
             android:layout_height="wrap_content"
             android:text="尚未發車"
             android:textSize="@dimen/text20sp"
+            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="@+id/item"
             app:layout_constraintTop_toBottomOf="@+id/routename" />
 
