--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,4 +27,6 @@
     <dimen name="ui16dp">16dp</dimen>
     <dimen name="ui20dp">20dp</dimen>
 
+    <dimen name="estimatetime">100dp</dimen>
+
 </resources>
